--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.10.1",
     "nodemon": "^3.1.9",
     "react-router-dom": "^7.3.0",
+    "slugify": "^1.6.6",
     "spinner": "^0.3.4"
   }
 }
