--- a/fnd/client/package.json
+++ b/fnd/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.24.3",
     "axios": "^1.8.3",
     "dotenv": "^16.4.7",
     "react": "^19.0.0",
