--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 PORT=3001
 MONGO_URI=mongodb://localhost:27017/ecm
 JWT_SECRET=dhbfsdfvsvsdkdvdfsbvsdkvsdbcsjdjcdfvjksdnv
+BRAINTREE_MERCHANT_ID=cgx9jt5gh3md3s4k
+BRAINTREE_PUBLIC_KEY=9prx7z5yqg7mtr4k
+BRAIN_TREE_PRIVATE_KEY=a295eb93c4f68a857ec33cc76ee4fee7
 
 
 
