--- a/fnd/client/package.json
+++ b/fnd/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/braintree-web-drop-in": "^1.39.3",
     "antd": "^5.1.7",
     "axios": "^1.2.5",
     "braintree-web-drop-in-react": "^1.2.1",
